# Sim-to-Real-Transfer-for-Robotics

./: .gitignore  .pre-commit-config.yaml  DISCLAIMER.md  README.md  pyproject.toml  quick_start.py
.github/workflows/: ci.yml
configs/: default.yaml
demo/: app.py
examples/: sim_to_real_example.py
src/sim_to_real/: __init__.py  agents.py  cli.py  domain_randomization.py  environments.py  evaluation.py  utils.py
tests/: test_sim_to_real.py
