[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-to-real-robotics"
version = "0.1.0"
description = "Sim-to-Real Transfer for Robotics: A comprehensive framework for transferring learned behaviors from simulation to real-world robotics"
authors = [
    {name = "Robotics Research Team", email = "research@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    # Core scientific computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Machine learning and deep learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "stable-baselines3>=2.0.0",
    "sb3-contrib>=2.0.0",
    "imitation>=0.4.0",
    
    # Robotics simulation
    "pybullet>=3.2.5",
    "mujoco>=2.3.0",
    "gymnasium>=0.29.0",
    "gymnasium-robotics>=1.2.0",
    
    # ROS 2 (optional, install separately)
    # "rclpy>=3.3.0",
    # "tf2-py>=0.25.0",
    
    # Kinematics and dynamics
    "pinocchio>=2.6.0",
    "casadi>=3.6.0",
    "numpy-quaternion>=2023.4.3",
    
    # Computer vision and perception
    "opencv-python>=4.8.0",
    "open3d>=0.17.0",
    "ultralytics>=8.0.0",
    
    # Configuration and logging
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    
    # Web interface
    "streamlit>=1.25.0",
    "gradio>=3.40.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.3.0",
]

ros2 = [
    "rclpy>=3.3.0",
    "tf2-py>=0.25.0",
    "geometry-msgs>=4.2.0",
    "sensor-msgs>=4.2.0",
    "nav-msgs>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/robotics-research/sim-to-real-robotics"
Repository = "https://github.com/robotics-research/sim-to-real-robotics.git"
Documentation = "https://sim-to-real-robotics.readthedocs.io"
Issues = "https://github.com/robotics-research/sim-to-real-robotics/issues"

[project.scripts]
sim-to-real = "sim_to_real.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
